--- a/app.css
+++ b/app.css
@@ -1,28 +1,89 @@
-header {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  html {
+    scroll-behavior: smooth;
+  }
+  
+  header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
-}
-
-h1 {
-    margin: 10px;
+    padding: 20px;
+    background-color: #f8f8f8;
+  }
+  
+  h1 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    font-style: italic;
     font-size: 24px;
-}
-
-.right-section {
+  }
+  
+  .right-section {
     display: flex;
-    gap: 10px;
+    gap: 15px;
     align-items: center;
-    
-}
-
-.right-section h2,
-.right_section h3,
-.right-section h4 {
-    margin: 10px;
+  }
+  
+  .button {
     font-size: 16px;
-    line-height: 1;
-    vertical-align: middle;
     text-decoration: underline;
-}
+    color: #000;
+    cursor: pointer;
+  }
+  .button:hover {
+    color: gray;
+  }
+  
+  .profile-pic {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 150px);
+    margin-top: -30px;
+    flex-wrap: wrap;
+  }
+  
+  .profile-pic img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    margin-right: 20px;
+  }
+
+  .text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+
+  .profile-text{
+    font-size: 18px;
+    font-weight: 300;
+    margin: 0;
+    
+  }
+
+  .name {
+    font-size: 24px;
+    font-weight: 500;
+    margin: 0;
+  }
+
+  section {
+    padding: 100px 20px;
+  }
+  
+  section h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
